--- a/original/index.html
+++ b/original/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>original</title>
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1116505_hlio53wxli.css">
+    <script src="https://at.alicdn.com/t/font_1116505_hlio53wxli.js"></script>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
