--- a/original/index.html
+++ b/original/index.html
@@ -8,9 +8,9 @@
     <script src="https://at.alicdn.com/t/font_1116505_w3w6tmf72u.js"></script>
     <script src="//vuejs.org/js/vue.min.js"></script>
     <!-- import stylesheet -->
-    <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
+    <link rel="stylesheet" href="https://unpkg.com/iview/dist/styles/iview.css">
     <!-- import iView -->
-    <script src="//unpkg.com/iview/dist/iview.min.js"></script>
+    <script src="https://unpkg.com/iview/dist/iview.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
